@@ -12,5 +12,6 @@ Open Vehicle Monitor System v3 - Change log
                            can be used for UART to simcom modem for OVMS v3.1 hardware).
                            https://www.esp32.com/viewtopic.php?f=13&t=4838
                          - Record statistics for CAN bus interrupts (per controller) and show in status.
+                         - Don't issue network.reconfigured event when network is down.
 
 2018-02-21 MWJ  3.0.990  Handle case of SIMCOM modem MUX down during data states
